@@ -27,15 +27,14 @@ public enum Role {
             )
     ),
 
-    MANAGER
-            (
-                    Set.of(
-                            MANAGER_READ,
-                            MANAGER_CREATE,
-                            MANAGER_UPDATE,
-                            MANAGER_DELETE
-                    )
-            ),
+    MANAGER(
+            Set.of(
+                    MANAGER_READ,
+                    MANAGER_CREATE,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE
+            )
+    ),
     ;
 
     @Getter
@@ -44,8 +43,8 @@ public enum Role {
     public List<SimpleGrantedAuthority> getAuthorities() {
         var authorities = getPermissions()
                 .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+                .map(permission -> new SimpleGrantedAuthority(permission.getPermission()))
+                .collect(Collectors.toList());
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
